fixed some small css issues with alignment in header and contrast ratio in about and exhibition for accessibility

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,8 @@
 // Variables
 $font-size: .9em;
 $font-color:  rgb(204, 151, 128);
-$font-color-grey: rgb(175, 175, 175);
+$font-color-darker-grey: rgb(150, 150, 150);
+$font-color-grey: rgb(200, 200, 200);
 $font-color-hover: rgb(241, 177, 149);
 $background-color: rgb(25, 25, 25);
 $font: 'Montserrat', sans-serif;
