--- a/src/Components/Exhibition/_Exhibition.scss
+++ b/src/Components/Exhibition/_Exhibition.scss
@@ -26,7 +26,7 @@
             line-height: 30px;
             letter-spacing: 1.5px;
             font-size: 1em;
-            color: rgb(100, 100, 100);
+            color: $font-color-darker-grey;
             text-transform: uppercase;
             display: flex;
             justify-content: space-between;
@@ -52,7 +52,7 @@
             line-height: 30px;
             letter-spacing: 1.5px;
             font-size: 1em;
-            color: rgb(100, 100, 100);
+            color: $font-color-darker-grey;
             text-transform: uppercase;
             display: flex;
             justify-content: space-between;
