--- a/src/Components/Header/_Header.scss
+++ b/src/Components/Header/_Header.scss
@@ -392,8 +392,8 @@ header {
                 padding: 0;
                 
                 @media (max-width: #{$screen-xl}) {
-                    margin-left: 10px;;
-                    padding-top: 2px; 
+                    margin-left: 10px;
+                    padding-top: 20px; 
                  }
 
                 
@@ -418,7 +418,7 @@ header {
                 padding: 0;
                 
                 @media (max-width: #{$screen-xl}) {
-                    margin-left: 10px;;
+                    margin-left: 10px;
                     padding-top: 2px; 
                  }
                 
